[package]
name = "jewl"
version = "0.0.0"
publish = false
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = { version = "1.14.7" }
solana-security-txt = { version = "1.1.0" }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3" }
pyth-sdk-solana = { version = "0.7.1" }

[lib]
crate-type = ["cdylib", "lib"]
path = "sol/lib.rs"
